tests/spec/format/snapshots/comment_trailing_in_block_body.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn f() -> int {
    let x = 1
    // trailing in block
  }
---
fn f() -> int {
  let x = 1
  // trailing in block
}
