tests/spec/format/snapshots/comment_trailing_in_enum_body.snap
---
source: tests/spec/format/mod.rs
description: |-
  enum E {
    A,
    B,
    // trailing
  }
---
enum E {
  A,
  B,

  // trailing
}
