tests/spec/format/snapshots/comment_trailing_in_fn_body.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn f() {
    let x = 1
    x
    // trailing in fn body
  }
---
fn f() {
  let x = 1
  x
  // trailing in fn body
}
