tests/spec/format/snapshots/comment_trailing_in_interface_body.snap
---
source: tests/spec/format/mod.rs
description: |-
  interface I {
    fn first()
    fn second()
    // trailing
  }
---
interface I {
  fn first()
  fn second()

  // trailing
}
