tests/spec/format/snapshots/comment_trailing_in_loop_body.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn f() {
    loop {
      break
      // trailing in loop body
    }
  }
---
fn f() {
  loop {
    break
    // trailing in loop body
  }
}
