tests/spec/format/snapshots/comment_trailing_in_match_block.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn f(x: int) -> int {
    match x {
      1 => 1,
      _ => 0,
      // trailing in match block
    }
  }
---
fn f(x: int) -> int {
  match x {
    1 => 1,
    _ => 0,

    // trailing in match block
  }
}
