tests/spec/format/snapshots/comment_trailing_in_select_block.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn f(c: Channel<int>) -> int {
    select {
      match c.receive() {
        Some(v) => v,
        None => 0,
      },
      _ => 1,
      // trailing
    }
  }
---
fn f(c: Channel<int>) -> int {
  select {
    match c.receive() {
      Some(v) => v,
      None => 0,
    },
    _ => 1,

    // trailing
  }
}
