tests/spec/format/snapshots/comment_trailing_inside_nested_match_in_select.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn f(c: Channel<int>) -> int {
    select {
      match c.receive() {
        Some(v) => v,
        None => 0,
        // trailing nested block
      },
      _ => 1,
    }
  }
---
fn f(c: Channel<int>) -> int {
  select {
    match c.receive() {
      Some(v) => v,
      None => 0,

      // trailing nested block
    },
    _ => 1,
  }
}
