tests/spec/format/snapshots/comment_trailing_inside_struct_no_blank.snap
---
source: tests/spec/format/mod.rs
description: |-
  struct S {
    a: int,
    // trailing
  }
---
struct S {
  a: int,
  // trailing
}
