tests/spec/format/snapshots/comment_trailing_same_line_on_top_level_item.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn h() {} // trailing
  fn i() {}
---
fn h() {} // trailing

fn i() {}
